--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Pure JS Excel Application",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack --mode production "
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,40 @@
   ],
   "author": "Max",
   "license": "ISC",
+  "browserslist": "> 0.25%, not dead",
   "bugs": {
     "url": "https://github.com/deepnight312/excel-curse/issues"
   },
-  "homepage": "https://github.com/deepnight312/excel-curse#readme"
+  "homepage": "https://github.com/deepnight312/excel-curse#readme",
+  "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.3",
+    "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-loader": "^4.0.2",
+    "fs": "^0.0.1-security",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "process": "^0.11.10"
+  }
 }
